# cairnsearch

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  WINDOWS_INSTALL.md  config.example.toml  pyproject.toml  run.sh
src/cairnsearch/: __init__.py  config.py
src/cairnsearch/api/: __init__.py  app.py
src/cairnsearch/cli/: __init__.py  main.py
src/cairnsearch/core/: __init__.py  deduplication.py  exceptions.py  guardrails.py  models.py  progress.py  quarantine.py  subprocess_runner.py
src/cairnsearch/db/: __init__.py  connection.py  models.py  schema.sql
src/cairnsearch/extractors/: __init__.py  base.py  csv_extractor.py  docx_extractor.py  html_extractor.py  metadata.py  ocr_extractor.py  pdf_extractor.py  registry.py  txt_extractor.py  xlsx_extractor.py
src/cairnsearch/indexer/: __init__.py  enhanced_index_manager.py  hasher.py  index_manager.py
src/cairnsearch/monitoring/: __init__.py  alerts.py  metrics.py  structured_logging.py
src/cairnsearch/processing/: __init__.py  excel_processor.py  form_extractor.py  image_processor.py  pdf_processor.py  semantic_chunker.py  table_extractor.py  text_normalizer.py
src/cairnsearch/queue/: __init__.py  job_queue.py  worker.py
src/cairnsearch/rag/: __init__.py  chunker.py  config.py  embeddings.py  engine.py  llm.py  reranker.py  retriever.py  vector_store.py
src/cairnsearch/search/: __init__.py  query_builder.py  query_parser.py  search_engine.py  snippets.py
src/cairnsearch/security/: __init__.py  audit.py  (+3 more)
ui/: app.js  index.html  styles-extra.css  styles.css
(+13 files in other folders)
